# CloudyNotes

./: .gitignore  LICENSE  README.md  addNotes.py  addVectors.py  commands  commands.txt  db_test.py  docker-compose-local-ollama.yml  docker-compose.yml  hello.db  hello.db-client_wal_index  hello.db-shm  hello.db-wal  package-lock.json  package.json  pyproject.toml  serverless.yml  steps.md  test_pinecone.py
backend/: app.py  db.py  delete.py  get.py  main.py  notes_rag_testing.py  post.py  put.py
backend/data/: 75 LeetCode problems 78433aacf44c4c39b2698f45d7a53cd0.md  AWS d0c048bd7a8a4eb2837b87ce43bccea2.md  AWS vs Kubernetes 974c3bf627d34bbf8c47964ab3451774.md  About sprint b962362fe907473aa1a97e115135755b.md  Anti patterns➖ 633172d071f04dea92ea8b64892da4fc.md  Before interview➖ 63e3f85dcaab4a16940b9dfd804e31dc.md  Databses ef5f0c79b67640f995813e8b2c1437a7.md  Design HashMap 093bf13f936e43fc95f56a8b6a08f120.md  Design LinkedList 46db1c29b25c4009b9c5ea8225c34b0f.md  Design of a call centre bd96782f73f7421fa886d6584f11c9fd.md  DevOps- 527d5c1ff2c2407ba7e06349f7f71afa.md  Docker and Kubernetes 1a4475dc032880adb8d1f668869018c1.md  English replies 3df99dc787f745a794723410654b93ea.md  Failure cases in API gateway use Java spring boot 0951988763194d8db1a4018948fe2755.md  Fiserv API Integration 22f4800fa157471f96b356ce9dd8e878.md  Home 34eff855a21743c2a41bd45785beeb32.md  IBM Software Developer (Feb 5, 2025) 192475dc032880e3be5be69aaa676f8b.md  (+26 more)
createdb/: create_db.py  exportfolders.sql  exportnotes.sql  exporttemplate.sql
frontend/: index.html  script.js
(+28 files in other folders)
