[project]
name = "rag-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "ollama>=0.4.7",
    "pgvector>=0.3.6",
    "psycopg[binary,pool]>=3.2.5",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
]
